Creating Grid viewer for map
Creating the class for viewing the grid with placement map textures

--- a/LevorMapEditor/LevorMapEditor/LevorMapEditor.csproj
+++ b/LevorMapEditor/LevorMapEditor/LevorMapEditor.csproj
@@ -6,4 +6,30 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\Brush.png" />
+    <None Remove="Resources\Clear.png" />
+    <None Remove="Resources\Eraser.png" />
+    <None Remove="Resources\Fill.png" />
+    <None Remove="Resources\GridPlaceHolder.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Brush.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Clear.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Eraser.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Fill.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\GridPlaceHolder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
